erDiagram
    users ||--o{ sessions : "user_id"
    users ||--o{ refresh_tokens : "user_id"
    users ||--o| user_profiles : "user_id"
    users ||--o| driver_profiles : "user_id"
    users ||--o| wallets : "user_id"
    users ||--o{ otp_requests : "user_id"
    users ||--o{ emergency_contacts : "user_id"
    users ||--o{ carts : "user_id"
    users ||--o{ ride_orders : "user_id"
    users ||--o{ food_orders : "user_id"
    users ||--o{ payments : "user_id"
    users ||--o{ promo_usage : "user_id"
    users ||--o{ ratings : "user_id"
    users ||--o{ reviews : "user_id"
    users ||--o{ notification_logs : "receiver_id"
    users ||--o{ email_logs : "receiver_id"
    users ||--o{ audit_logs : "user_id"

    user_profiles ||--o{ user_addresses : "user_id"
    otp_requests ||--o| otp_verifications : "otp_request_id"

    driver_profiles ||--o{ driver_documents : "driver_id"
    driver_profiles ||--o| driver_locations : "driver_id"
    driver_profiles ||--o{ ride_orders : "driver_id"
    driver_profiles ||--o{ food_orders : "driver_id"
    driver_profiles ||--o{ match_requests : "driver_id"
    driver_locations ||--o{ location_history : "driver_id"
    driver_locations ||--o{ driver_status_logs : "driver_id"

    merchants ||--o{ menu_items : "merchant_id"
    merchants ||--o{ food_orders : "merchant_id"
    merchants ||--o{ reviews : "merchant_id"
    menu_items ||--o{ cart_items : "menu_item_id"
    menu_items ||--o{ food_order_items : "menu_item_id"

    carts ||--o{ cart_items : "cart_id"
    food_orders ||--o{ food_order_items : "order_id"
    food_orders ||--o{ reviews : "order_id"
    ride_orders ||--o| match_requests : "order_id"
    food_orders ||--o| match_requests : "order_id"
    ride_orders ||--o{ payments : "order_id"
    food_orders ||--o{ payments : "order_id"
    ride_orders ||--o| chat_sessions : "order_id"
    food_orders ||--o| chat_sessions : "order_id"
    ride_orders ||--o{ emergency_events : "order_id"
    food_orders ||--o{ emergency_events : "order_id"

    payment_methods ||--o{ payments : "method_id"
    payments ||--o{ payment_logs : "payment_id"
    payments ||--o| settlements : "payment_id"
    wallets ||--o{ wallet_transactions : "wallet_id"
    promos ||--o{ promo_usage : "promo_id"
    chat_sessions ||--o{ messages : "order_id"
